# File-Tape

./: CMakeLists.txt  README.md  converter.cpp  converter.hpp  main.cpp  tape.config  tapes.cpp  tapes.hpp
src/: delimiters.cpp  delimiters.hpp  main.cpp  tapes.cpp
tests/: CMakeLists.txt  test_sorting.cpp
tests/expected_output/: out4.tp  out5.tp  out9.tp
tests/tapes/: inp1.tp  inp4.tp  inp5.tp  inp9.tp
